// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutofillInlineMenuButton initAutofillInlineMenuButton creates the button element with the locked icon when the user's auth status is not Unlocked 1`] = `
<button
  aria-label="toggleBitwardenVaultOverlay"
  class="inline-menu-button"
  tabindex="-1"
  type="button"
>
  <svg
    aria-hidden="true"
    class="inline-menu-button-svg-icon logo-locked-icon"
    fill="none"
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 10.568C0 4.731 4.73 0 10.568 0h10.864C27.268 0 32 4.731 32 10.568v10.864C32 27.269 27.268 32 21.432 32H10.568C4.73 32 0 27.268 0 21.432V10.568Z"
      fill="url(#paint0_linear_11350_7889)"
    />
    <g
      filter="url(#filter0_d_11350_7889)"
    >
      <path
        clip-rule="evenodd"
        d="M9.328 23.872a.622.622 0 0 1-.618-.63l.023-1.823 5.177-5.176c-.455-.951-.607-1.976-.458-3.077.15-1.1.644-2.07 1.48-2.906 1.034-1.033 2.274-1.55 3.72-1.55 1.447 0 2.687.517 3.72 1.55 1.034 1.033 1.55 2.273 1.55 3.72 0 1.446-.516 2.686-1.55 3.72a5.14 5.14 0 0 1-2.836 1.472 5.094 5.094 0 0 1-3.146-.45l-.218.217v1.858a.622.622 0 0 1-.622.622h-1.235a.622.622 0 0 0-.622.623v1.231a.622.622 0 0 1-.626.622l-3.739-.023Zm10.256-9.294a1.555 1.555 0 1 0 0-3.11 1.555 1.555 0 0 0 0 3.11Z"
        fill="#fff"
        fill-rule="evenodd"
      />
    </g>
    <defs>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="paint0_linear_11350_7889"
        x1="5.548"
        x2="30.188"
        y1="29.127"
        y2="1.958"
      >
        <stop
          offset=".23"
          stop-color="#B6C4DF"
        />
        <stop
          offset="1"
          stop-color="#D3DDF5"
        />
      </lineargradient>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="userSpaceOnUse"
        height="20.625"
        id="filter0_d_11350_7889"
        width="20.652"
        x="5.99"
        y="6.534"
      >
        <feflood
          flood-opacity="0"
          result="BackgroundImageFix"
        />
        <fecolormatrix
          in="SourceAlpha"
          result="hardAlpha"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
        />
        <feoffset
          dy=".544"
        />
        <fegaussianblur
          stdDeviation="1.36"
        />
        <fecomposite
          in2="hardAlpha"
          operator="out"
        />
        <fecolormatrix
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"
        />
        <feblend
          in2="BackgroundImageFix"
          result="effect1_dropShadow_11350_7889"
        />
        <feblend
          in="SourceGraphic"
          in2="effect1_dropShadow_11350_7889"
          result="shape"
        />
      </filter>
    </defs>
  </svg>
</button>
`;

exports[`AutofillInlineMenuButton initAutofillInlineMenuButton creates the button element with the normal icon when the user's auth status is Unlocked  1`] = `
<button
  aria-label="toggleBitwardenVaultOverlay"
  class="inline-menu-button"
  tabindex="-1"
  type="button"
>
  <svg
    aria-hidden="true"
    class="inline-menu-button-svg-icon logo-icon"
    fill="none"
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 10.568C0 4.731 4.73 0 10.568 0h10.864C27.268 0 32 4.731 32 10.568v10.864C32 27.269 27.268 32 21.432 32H10.568C4.73 32 0 27.268 0 21.432V10.568Z"
      fill="url(#paint0_linear_11350_7889)"
    />
    <g
      filter="url(#filter0_d_11350_7889)"
    >
      <path
        clip-rule="evenodd"
        d="M9.328 23.872a.622.622 0 0 1-.618-.63l.023-1.823 5.177-5.176c-.455-.951-.607-1.976-.458-3.077.15-1.1.644-2.07 1.48-2.906 1.034-1.033 2.274-1.55 3.72-1.55 1.447 0 2.687.517 3.72 1.55 1.034 1.033 1.55 2.273 1.55 3.72 0 1.446-.516 2.686-1.55 3.72a5.14 5.14 0 0 1-2.836 1.472 5.094 5.094 0 0 1-3.146-.45l-.218.217v1.858a.622.622 0 0 1-.622.622h-1.235a.622.622 0 0 0-.622.623v1.231a.622.622 0 0 1-.626.622l-3.739-.023Zm10.256-9.294a1.555 1.555 0 1 0 0-3.11 1.555 1.555 0 0 0 0 3.11Z"
        fill="#fff"
        fill-rule="evenodd"
      />
    </g>
    <defs>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="paint0_linear_11350_7889"
        x1="5.548"
        x2="30.188"
        y1="29.127"
        y2="1.958"
      >
        <stop
          offset=".23"
          stop-color="#B6C4DF"
        />
        <stop
          offset="1"
          stop-color="#D3DDF5"
        />
      </lineargradient>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="userSpaceOnUse"
        height="20.625"
        id="filter0_d_11350_7889"
        width="20.652"
        x="5.99"
        y="6.534"
      >
        <feflood
          flood-opacity="0"
          result="BackgroundImageFix"
        />
        <fecolormatrix
          in="SourceAlpha"
          result="hardAlpha"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
        />
        <feoffset
          dy=".544"
        />
        <fegaussianblur
          stdDeviation="1.36"
        />
        <fecomposite
          in2="hardAlpha"
          operator="out"
        />
        <fecolormatrix
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"
        />
        <feblend
          in2="BackgroundImageFix"
          result="effect1_dropShadow_11350_7889"
        />
        <feblend
          in="SourceGraphic"
          in2="effect1_dropShadow_11350_7889"
          result="shape"
        />
      </filter>
    </defs>
  </svg>
</button>
`;
